add_executable(Atomic_unittest Atomic_unittest.cc)
target_link_libraries(Atomic_unittest muduo_base)

add_executable(Exception_test Exception_test.cc)
target_link_libraries(Exception_test muduo_base)

add_executable(LogFile_test LogFile_test.cc)
target_link_libraries(LogFile_test muduo_base)

if(BOOSTTEST_LIBRARY)
add_executable(LogStream_test LogStream_test.cc)
target_link_libraries(LogStream_test muduo_base boost_unit_test_framework)
endif()

add_executable(LogStream_bench LogStream_bench.cc)
target_link_libraries(LogStream_bench muduo_base)

add_executable(Singleton_test Singleton_test.cc)
target_link_libraries(Singleton_test muduo_base)

add_executable(SingletonThreadLocal_test SingletonThreadLocal_test.cc)
target_link_libraries(SingletonThreadLocal_test muduo_base)

add_executable(Thread_test Thread_test.cc)
target_link_libraries(Thread_test muduo_base)

add_executable(ThreadLocal_test ThreadLocal_test.cc)
target_link_libraries(ThreadLocal_test muduo_base)

add_executable(ThreadLocalSingleton_test ThreadLocalSingleton_test.cc)
target_link_libraries(ThreadLocalSingleton_test muduo_base)

add_executable(Timestamp_unittest Timestamp_unittest.cc)
target_link_libraries(Timestamp_unittest muduo_base)

